// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with relevant formStyles 1`] = `
<div>
  <page>
    <text
      style="font-size: 10pt; font-weight: bold; padding-top: 4pt; margin-bottom: 2pt; border: 1px solid red;"
    />
  </page>
</div>
`;

exports[`renders without formStyles 1`] = `
<div>
  <page>
    <text
      style="font-size: 10pt; font-weight: bold; padding-top: 4pt; margin-bottom: 2pt;"
    />
  </page>
</div>
`;
